--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
   import { getDatabase, ref, push, set, get, child, onValue, remove, update } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCx-gmf73_opjxB2GT9HkTyUaJLuT--tMQ",
-    authDomain: "kasir-7e48c.firebaseapp.com",
-    databaseURL: "https://kasir-7e48c-default-rtdb.asia-southeast1.firebasedatabase.app",
-    projectId: "kasir-7e48c",
-    storageBucket: "kasir-7e48c.appspot.com",
-    messagingSenderId: "63349901955",
-    appId: "1:63349901955:web:50a31befe202e88bee29b6",
-    measurementId: "G-NGGL6YBM69"
-  };
+ const firebaseConfig = {
+  apiKey: "AIzaSyA0y2oY7zY8J0bzuAbIEWYPrsBlrvVkzrs",
+  authDomain: "pengeluaran-ddf97.firebaseapp.com",
+  databaseURL: "https://pengeluaran-ddf97-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "pengeluaran-ddf97",
+  storageBucket: "pengeluaran-ddf97.firebasestorage.app",
+  messagingSenderId: "5145258786",
+  appId: "1:5145258786:web:fd0145b4596ea971a3d37b",
+  measurementId: "G-RHBSZMH90D"
+};
+
 
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
@@ -3021,3 +3022,4 @@ function tutupStruk() {
     </script>
 </body>
 </html>
+
